project list slider 적용

--- a/src/data/career_project.json
+++ b/src/data/career_project.json
@@ -1,12 +1,16 @@
 {
   "company": "잉카인터넷",
-  "tenure": "2020.10 ~ 2025.03 (4년 6개월)",
+  "start_date": "2020-10",
+  "end_date": "2025-03",
+  "period": "4년 6개월",
   "department": "개발부서",
   "position": "웹 개발자",
   "projects": [
     {
       "project_name": "제품 개발 - TACHYON Total Security",
-      "period": "2022.07 ~ 2024.12 (약 2년 6개월)",
+      "start_date": "2022.07",
+      "end_date": "2024.12",
+      "period": "2년 6개월",
       "stack": [
         "HTML",
         "CSS3(MediaQuery)",
@@ -49,7 +53,9 @@
     },
     {
       "project_name": "제품 개발 - TACHYON Linux Security",
-      "period": " 2021.03 ~ 2022.07 (1년 5개월)",
+      "start_date": "2021.03",
+      "end_date": "2022.07",
+      "period": "1년 5개월",
       "stack": [
         "Java",
         "SpringFramework",
@@ -80,5 +86,5 @@
       ]
     }
   ],
-  "이직사유": "풀스택 개발자로 경력을 시작하며 웹 개발의 전반적인 프로세스를 경험했고, 이후에는 프론트엔드 업무에 집중했습니다. 이 과정에서 프론트엔드와 백엔드 간의 상호작용에 대한 깊은 이해를 쌓을 수 있었으며, 이는 제가 풀스택 역량을 다시 한번 전문적으로 발전시키고 싶은 계기가 되었습니다. 앞으로는 프론트엔드 전문성을 유지하며 동시에 백엔드 역량을 강화하고, 더 폭넓은 기술을 경험할 수 있는 환경에서 성장하고자 이직을 결심했습니다. 새로운 팀원들과 협력하여 시너지를 창출하고 귀사의 프로젝트에 긍정적인 결과를 가져오겠습니다."
+  "reason_for_job_change": "풀스택 개발자로 경력을 시작하며 웹 개발의 전반적인 프로세스를 경험했고, 이후에는 프론트엔드 업무에 집중했습니다. 이 과정에서 프론트엔드와 백엔드 간의 상호작용에 대한 깊은 이해를 쌓을 수 있었으며, 이는 제가 풀스택 역량을 다시 한번 전문적으로 발전시키고 싶은 계기가 되었습니다. 앞으로는 프론트엔드 전문성을 유지하며 동시에 백엔드 역량을 강화하고, 더 폭넓은 기술을 경험할 수 있는 환경에서 성장하고자 이직을 결심했습니다. 새로운 팀원들과 협력하여 시너지를 창출하고 귀사의 프로젝트에 긍정적인 결과를 가져오겠습니다."
 }
